--- a/src/sass/components/_theme-button.scss
+++ b/src/sass/components/_theme-button.scss
@@ -7,7 +7,7 @@
   height: toRem(40);
   max-height: toRem(40);
   padding: 5px;
-  position: absolute;
+  position: fixed;
 
   border: none;
   transition: all 0.5s;
@@ -107,13 +107,14 @@
 .theme-pullout-menu-active {
   right: 0px;
 }
-@media (max-width: $large-breakpoint) {
+
+@media (max-width: $medium-breakpoint) {
   .theme-pullout-button,
   .dark-light-mode-button {
-    width: toRem(30);
-    max-width: toRem(30);
-    height: toRem(30);
-    max-height: toRem(30);
+    width: toRem(35);
+    max-width: toRem(35);
+    height: toRem(35);
+    max-height: toRem(35);
   }
 
   .theme-pullout-menu {
